--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,15 @@
 
     {% include header.html %}
 
+    <!-- content start -->
+
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    <!-- content end --> 
 
     {% include footer.html %}
     {% include javascripts.html %}
